# huggingface-tui

./: .gitignore  AUTHORS  LICENSE  Readme.md  devenv.nix  htui.py  hugginface.tcss  pyproject.toml
